added project info

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><font color="purple">Book a meeting</font> </a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,6 +200,7 @@
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
+                <!--
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; AI2 Solutions Ltd</div></div>
                     <div class="col-auto">
@@ -210,6 +211,7 @@
                         <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
+                -->
             </div>
         </footer>
         <!-- Bootstrap core JS-->
