--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,9 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Aviva</h2>
                                                <h3> Process Automation</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>In collaboration with the actuarial manager at Aviva, I successfully led a high-priority project focused on streamlining the management of Excel files. I developed a centralized Excel portal that served as the core for automation. By entering specific configurations in this newly created Excel file, the team could update all files in the selected folder automatically with just a button click, adhering to pre-established logic and settings. This initiative resulted in a significant efficiency improvement, saving the team approximately 15 hours of work per week.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/aviva-logo.png" alt="..." />
+                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Attewell Aerospace</h2>
                                                 <h3> Automated Reporting</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>This project was pivotal for the supply chain team at Attewell, addressing a lack of visibility into build plans and capacity utilizations. Previously, gaining insights in these areas required substantial manual effort. To streamline the process, I developed an automated Excel dashboard that seamlessly connected to the database, providing real-time metrics to senior management. This enhancement allowed for more efficient decision-making and reduced the time spent on data analysis.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
@@ -78,7 +78,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Attewell Aerospace</h2>
                                                 <h3> System Development</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>This project was initiated by the Head of Continuous Improvement at Attewell to enhance data collection and quality tracking on the shop floor. The request was for a customized Microsoft Access system to be developed to efficiently capture work completed and any related quality issues. Microsoft Access was selected for its ability to create a local database with an intuitive user interface. The solution streamlined data entry and improved visibility into shop floor performance and quality control.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
@@ -92,7 +92,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">John Radcliffe Hospital</h2>
                                                 <h3> Data Analysis</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Commissioned by the Ambulatory Assessment Unit (AAU) at John Radcliffe Hospital in Oxford, UK, this project focused on a concise data analysis task. Within a 48-hour window, I efficiently cleaned, analyzed, and visualized the data for the team. The process involved importing the data from Excel and creating visual representations using Tableau. My rapid turnaround provided the unit with actionable insights to inform their operations.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
@@ -106,7 +106,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Attest</h2>
                                                 <h3> Tableau Development</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>In this time-sensitive project, the client supplied templates to be replicated in Tableau. I successfully completed this task in a timely manner, adhering to the provided specifications and ensuring a high level of accuracy. The project was completed efficiently and met the client's expectations, marking it as a success.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
@@ -129,6 +129,7 @@
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
+                <!--
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; AI2 Solutions Ltd</div></div>
                     <div class="col-auto">
@@ -139,6 +140,7 @@
                         <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
+                -->
             </div>
         </footer>
         <!-- Bootstrap core JS-->
