--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><font color="purple">Book a meeting</font> </a></li>
                         </ul>
                     </div>
                 </div>
@@ -288,7 +288,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <!--
                                         <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                            -->
                                     </div>
                                 </div>
                             </div>
@@ -358,6 +360,7 @@
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
+                <!--
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; AI2 Solutions Ltd</div></div>
                     <div class="col-auto">
@@ -368,6 +371,7 @@
                         <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
+                -->
             </div>
         </footer>
         <!-- Bootstrap core JS-->
