added project info

--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                                                <h3> Process Automation</h3>
                                             <p>In collaboration with the actuarial manager at Aviva, I successfully led a high-priority project focused on streamlining the management of Excel files. I developed a centralized Excel portal that served as the core for automation. By entering specific configurations in this newly created Excel file, the team could update all files in the selected folder automatically with just a button click, adhering to pre-established logic and settings. This initiative resulted in a significant efficiency improvement, saving the team approximately 15 hours of work per week.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/aviva-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -66,7 +66,7 @@
                                                 <h3> Automated Reporting</h3>
                                             <p>This project was pivotal for the supply chain team at Attewell, addressing a lack of visibility into build plans and capacity utilizations. Previously, gaining insights in these areas required substantial manual effort. To streamline the process, I developed an automated Excel dashboard that seamlessly connected to the database, providing real-time metrics to senior management. This enhancement allowed for more efficient decision-making and reduced the time spent on data analysis.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/avantus-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                                                 <h3> System Development</h3>
                                             <p>This project was initiated by the Head of Continuous Improvement at Attewell to enhance data collection and quality tracking on the shop floor. The request was for a customized Microsoft Access system to be developed to efficiently capture work completed and any related quality issues. Microsoft Access was selected for its ability to create a local database with an intuitive user interface. The solution streamlined data entry and improved visibility into shop floor performance and quality control.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/avantus-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                                 <h3> Data Analysis</h3>
                                             <p>Commissioned by the Ambulatory Assessment Unit (AAU) at John Radcliffe Hospital in Oxford, UK, this project focused on a concise data analysis task. Within a 48-hour window, I efficiently cleaned, analyzed, and visualized the data for the team. The process involved importing the data from Excel and creating visual representations using Tableau. My rapid turnaround provided the unit with actionable insights to inform their operations.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/nhs-logo-removebg-preview.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                                 <h3> Tableau Development</h3>
                                             <p>In this time-sensitive project, the client supplied templates to be replicated in Tableau. I successfully completed this task in a timely manner, adhering to the provided specifications and ensuring a high level of accuracy. The project was completed efficiently and met the client's expectations, marking it as a success.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/attest-logo.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
