--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Oct 2021 - Present</div>
-                                                <div class="small fw-bolder">Business Intelligence Developer</div>
+                                                <div class="small fw-bolder">Data Engineer</div>
                                                 <div class="small text-muted">Zappi</div>
                                                 <div class="small text-muted">London, UK</div>
                                             </div>
