--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
                                                 requirements.
                                             </li>
                                             <li>
-                                                Lead the implementation of Airflow (transitioning from RQ Scheduler/flask app) as the primary orchestrator for the team.
+                                                Collaborate with the Head of Business Intelligence and other team members to design a data platform with self-service capabilites at the forefront.
                                             </li>
                                             <li>
                                                 Collaborate with cross-functional teams to understand their business needs and provided support in data collection and analysis.
@@ -82,16 +82,10 @@
                                                 Collaborated closely with the leadership team to identify business requirements and successfully delivered fully automated KPI reporting using Tableau.
                                             </li>
                                             <li>
-                                                Engineered a dedicated infrastructure, including the development of a custom Flask application, to streamline company-wide self-serve analytics.
+                                                Take ownership of the data engineering data strategy, starting small and scale up.
                                             </li>
                                             <li>
-                                                This innovative solution efficiently allocates and rotates Tableau licenses among users, eliminating the dependency on Tableau Admin interventions.
-                                            </li>
-                                            <li>
-                                                Designing and implementing data pipelines and models, ensuring data quality and integrity. (AWS Glue, AWS AppFlow, S3, Redshift, Airflow)
-                                            </li>
-                                            <li>
-                                                Building, maintain and optimising our data warehouse (Redshift) to support reporting and analytics.
+                                                Manage growing set of data sources, ensuring the availability, reliability and data quality.
                                             </li>
                                         </ul></div></div>
                                     </div>
